package BaiTapThucHanh.observer.CA1;

public interface MyStreamListener<T> {
    public void listen(T t);
}
